<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="caption">Write a caption...</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="share">Share</string>

    <string name="logout">LOGOUT</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment...</string>
    <string name="post">Post</string>
    <string name="instagram">Instagram</string>
    <string name="messages">Messages</string>
    <string name="send">SEND</string>
    <string name="message_hint">Message...</string>
    <string name="profile_me">My PFP</string>
    <string name="profile_other">Other PFP</string>

</resources>