<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="90dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/InstagramBlue"
        android:text="@string/login"
        android:textColor="@color/whitePrimary" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="0dp"
        android:text="@string/sign_up"
        android:textColor="@color/blackPrimary" />

    <TextView
        android:id="@+id/tvInstagram"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="110dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/instagram"
        android:textAlignment="center"
        android:textAppearance="@style/InstagramTextAppearance"
        android:textSize="56dp" />

</RelativeLayout>